--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <h3>Contact Details</h3>
         <p>Contact: 03233291232</p>
         <p>Email:anus.65192@iqra.edu.pk</p>
-        <p>GitHub: <a href="https://github.com/faraz-ahmed-1"> faraz-ahmed-1</a></p>
+        <p>GitHub: <a href="https://anuskhan90.github.io/Web-task/"> anuskhan90</a></p>
     </main>
     <br><br>
     <footer>
